--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             >Operations</a
           >
         </li>
-        <li>
+        <li hidden>
           <a
             id="scenes-menu-item"
             href="#scenes"
@@ -45,7 +45,7 @@
             >Scenes</a
           >
         </li>
-        <li>
+        <li hidden>
           <a
             id="mode-menu-item"
             href="#mode"
@@ -88,7 +88,6 @@
             Fullscreen
           </button>
           <button id="blackoutBtn" onclick="toggleBlackout()">BlackOut</button>
-          <button id="navbarBtn" onclick="toggleNavbarHide()">Menu</button>
 
           <span id="echo"></span>
         </div>
@@ -152,6 +151,8 @@
       let onlySelectedSliders = false;
       let actualIndex = [];
       let actualIndexLength;
+      let sliderMoving = false;
+      let menuEnable = true;
 
       let updateLayoutFlag = false;
 
@@ -174,14 +175,6 @@
         selectedSliders = new Array(totalSliders).fill(0);
       }
       setCookie("selectedSliders", JSON.stringify(selectedSliders), 400);
-
-      // menuEnable
-      if (doesCookieExist("menuEnable")) {
-        menuEnable = JSON.parse(getCookie("menuEnable"));
-      } else {
-        menuEnable = true;
-      }
-      setCookie("menuEnable", JSON.stringify(menuEnable), 400);
 
       // currentPage
       if (doesCookieExist("currentPage")) {
@@ -270,9 +263,11 @@
           // --------------------------------- Render sliders ---------------------------------
           // ----------------------------------------------------------------------------------
           for (let i = start; i < end; i++) {
+            // Crear el contenedor principal para el slider
             let sliderWrapper = document.createElement("div");
             sliderWrapper.classList.add("slider-wrapper");
 
+            // Crear el nombre
             let nameLabel = document.createElement("div");
             nameLabel.textContent = `${String(actualIndex[i] + 1).padStart(
               3,
@@ -281,15 +276,18 @@
             sliderWrapper.appendChild(nameLabel);
             nameLabel.style.color = "white";
 
+            // Crear el valor
             let valueDisplay = document.createElement("div");
             valueDisplay.textContent = sliderValues[actualIndex[i]];
             sliderWrapper.appendChild(valueDisplay);
             valueDisplay.style.color = "white";
 
+            // Crear el contenedor del deslizador y agregarlo al contenedor principal
             let slider = document.createElement("div");
             sliderWrapper.appendChild(slider);
             container.appendChild(sliderWrapper);
 
+            // Crear el deslizador
             noUiSlider.create(slider, {
               start: sliderValues[actualIndex[i]],
               orientation: "vertical",
@@ -298,8 +296,7 @@
                 min: 0,
                 max: 255,
               },
-              connect: [true, false], // Conecta el rango inferior a la manija del deslizador
-              // ... cualquier otra configuración ...
+              connect: [true, false],
             });
 
             // Establecer el color de la manija
@@ -325,10 +322,13 @@
             });
 
             slider.noUiSlider.on("start", function () {
+              sliderMoving = true;
               valueDisplay.style.color = "red";
             });
 
             slider.noUiSlider.on("end", function () {
+              sliderMoving = false;
+              if (menuEnable) toggleNavbarHide();
               valueDisplay.style.color = "white";
               setCookie("sliderValues", JSON.stringify(sliderValues), 400);
             });
@@ -417,7 +417,6 @@
       // Toggle Navbar Hide
       function toggleNavbarHide() {
         menuEnable = !menuEnable;
-        setCookie("menuEnable", JSON.stringify(menuEnable), 365);
         updateLayout();
       }
 
@@ -697,22 +696,40 @@
 
       // Show Navbar on mousemove
       document.body.addEventListener("mousemove", function (event) {
-        if (event.clientY <= 5 && !menuEnable) {
+        if (event.clientY <= 5 && !menuEnable && !sliderMoving) {
           toggleNavbarHide();
         }
       });
 
       // Hide Navbar on mousemove
       document.body.addEventListener("mousemove", function (event) {
-        if (event.clientY > 30 && menuEnable) {
+        if (
+          event.clientY > 30 &&
+          menuEnable &&
+          !document.getElementById("console").hidden &&
+          !sliderMoving
+        ) {
           toggleNavbarHide();
         }
       });
 
-      // Show Navbar on touch
+      // Show Navbar on touchmove
       document.body.addEventListener("touchmove", function (event) {
         var touch = event.touches[0] || event.changedTouches[0];
-        if (touch.pageY <= 30 && !menuEnable) {
+        if (touch.pageY <= 30 && !menuEnable && !sliderMoving) {
+          toggleNavbarHide();
+        }
+      });
+
+      // Hide Navbar on touchmove
+      document.body.addEventListener("touchmove", function (event) {
+        var touch = event.touches[0] || event.changedTouches[0];
+        if (
+          touch.pageY > 30 &&
+          menuEnable &&
+          !document.getElementById("console").hidden &&
+          !sliderMoving
+        ) {
           toggleNavbarHide();
         }
       });
