cambio de extencion del favicon

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         id="riseUpSelectedSlidersBtn"
         onclick="riseUpAllSelectedSliders()"
       >
-        Rise up selected sliders
+        Rise up selected sliders & down unselected
       </button>
     </div>
 
@@ -734,6 +734,8 @@
           toggleNavbarHide();
         }
       });
+
+      // Estoy seguro de que hay veces que la pagina actual esta mal o no existe y la cantidad de paginas es incorrecta.No lo investigue.
     </script>
   </body>
 </html>
