--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Sliders</title>
     <link href="dark.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png?" />
   </head>
   <body>
     <nav id="navbar" class="navbar" hidden>
